add redux to the mix and update some stupid shit

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,10 @@
     "polymer": "Polymer/polymer",
     "paper-button": "PolymerElements/paper-button",
     "paper-card": "PolymerElements/paper-card",
-    "paper-styles": "PolymerElements/paper-styles"
+    "paper-styles": "PolymerElements/paper-styles",
+    "polymer-redux": "^1.0.4",
+    "paper-input": "PolymerElements/paper-input#^2.0.2",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^2.0.0"
   },
   "name": "synthesis-demo",
   "version": "2.0-preview"
