--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.0",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "polymer-weight": "^1.0.3"
