--- a/public/web.manifest.json
+++ b/public/web.manifest.json
@@ -1,16 +1,14 @@
-{ 
-  "short_name": "Synthesis",
-  "name": "Synthesis",
-  "icons": [
-    {
-      "src": "mwc.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "theme_color":"#3f51b5",
-  "background":"#3f51b5",
-  "background_color":"#3f51b5"
+{
+    "short_name": "Change Me",
+    "name": "Change Me",
+    "icons": [{
+        "src": "mwc.png",
+        "sizes": "128x128",
+        "type": "image/png"
+    }],
+    "start_url": "/",
+    "display": "standalone",
+    "theme_color": "#3f51b5",
+    "background": "#3f51b5",
+    "background_color": "#3f51b5"
 }
