--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "weigh": "weigh --path imports/ui/index.html --depth 2"
+    "weigh": "weigh --path imports/ui/index.html --depth 2",
+    "testdeploy": "scripts/testDeploy.sh"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
