--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "testdeploy": "scripts/testDeploy.sh"
   },
   "dependencies": {
+    "@skatejs/ssr": "^0.15.4",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.0",
     "meteor-node-stubs": "~0.2.0",
