--- a/public/web.manifest.json
+++ b/public/web.manifest.json
@@ -2,8 +2,8 @@
     "short_name": "Change Me",
     "name": "Change Me",
     "icons": [{
-        "src": "mwc.png",
-        "sizes": "128x128",
+        "src": "icon.png",
+        "sizes": "512x512",
         "type": "image/png"
     }],
     "start_url": "/",
