--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "core-js": "^2.5.1",
     "es6-promise": "^4.1.0",
     "meteor-node-stubs": "~0.2.0",
     "redux": "^3.7.2"
