--- a/bower.json
+++ b/bower.json
@@ -4,14 +4,13 @@
     "app-layout": "PolymerElements/app-layout",
     "iron-flex-layout": "PolymerElements/iron-flex-layout",
     "iron-pages": "PolymerElements/iron-pages",
-    "polymer": "Polymer/polymer",
+    "polymer": "Polymer/polymer@next",
     "paper-button": "PolymerElements/paper-button",
     "paper-card": "PolymerElements/paper-card",
     "paper-styles": "PolymerElements/paper-styles",
     "polymer-redux": "^1.0.4",
     "paper-input": "PolymerElements/paper-input#^2.0.2",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^2.0.0",
-    "io-value": "arodic/io-value#^2.1.0"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^2.0.0"
   },
   "name": "synthesis-demo",
   "version": "2.0-preview"
