--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "testdeploy": "scripts/testDeploy.sh"
   },
   "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1",
     "@skatejs/ssr": "^0.15.4",
     "babel-runtime": "^6.26.0",
     "es6-promise": "^4.1.0",
