--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "meteor run",
     "weigh": "weigh --path imports/ui/index.html --depth 2",
-    "testdeploy": "scripts/testDeploy.sh"
+    "testdeploy": "scripts/testDeploy.sh",
+    "buildapp": "scripts/buildApp run http://localhost:3000/",
+    "deploy": "scripts/deploy.sh http://localhost:3000/ 3000"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
