npm run start now installs npm dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "yarn install && meteor run",
     "weigh": "weigh --path imports/ui/index.html --depth 2",
     "testdeploy": "scripts/testDeploy.sh"
   },
