--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@polymer/app-layout": "^3.0.0-pre.1",
+    "@polymer/app-route": "^3.0.0-pre.1",
     "@polymer/paper-button": "^3.0.0-pre.1",
     "@polymer/paper-input": "^3.0.0-pre.1",
     "@skatejs/ssr": "^0.15.4",
