--- a/imports/ui/node_links/@polymer/app-layout/package.json
+++ b/imports/ui/node_links/@polymer/app-layout/package.json
@@ -1,18 +1,37 @@
 {
-  "name": "@polymer/app-layout",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "A set of layout elements for your app",
-  "contributors": [
-    "The Polymer Authors"
-  ],
-  "main": "app-layout.html",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/PolymerElements/app-layout"
+  "_from": "@polymer/app-layout@^3.0.0-pre.1",
+  "_id": "@polymer/app-layout@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-ENjISPOPzdbItFXxSAEKb2nyyW9YhEHWqIHIO9iUW14XTkfBVMW9TZBjIovRf+2wlk8DWBTjLoUvEX/FZU92Zg==",
+  "_location": "/@polymer/app-layout",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/app-layout@^3.0.0-pre.1",
+    "name": "@polymer/app-layout",
+    "escapedName": "@polymer%2fapp-layout",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
   },
-  "license": "https://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/app-layout",
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/@polymer/app-layout/-/app-layout-3.0.0-pre.1.tgz",
+  "_shasum": "612df4d04fd76d36350547aba65920a4a9050f85",
+  "_spec": "@polymer/app-layout@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/app-layout/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
   "dependencies": {
     "@polymer/iron-flex-layout": "^3.0.0-pre.1",
     "@polymer/iron-media-query": "^3.0.0-pre.1",
@@ -20,5 +39,17 @@
     "@polymer/iron-scroll-target-behavior": "^3.0.0-pre.1",
     "@polymer/polymer": "^3.0.0-pre.1"
   },
-  "devDependencies": {}
+  "deprecated": false,
+  "description": "A set of layout elements for your app",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/app-layout",
+  "license": "https://polymer.github.io/LICENSE.txt",
+  "main": "app-layout.html",
+  "name": "@polymer/app-layout",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/PolymerElements/app-layout.git"
+  },
+  "version": "3.0.0-pre.1"
 }
