--- a/imports/ui/node_links/@polymer/app-route/package.json
+++ b/imports/ui/node_links/@polymer/app-route/package.json
@@ -1,16 +1,44 @@
 {
-  "name": "@polymer/app-route",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "App routing expressed as Polymer Custom Elements.",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/app-route@^3.0.0-pre.1",
+  "_id": "@polymer/app-route@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-blfadnJQpyjT7UlS79wYjs2EFCcBTzNMYi66Ab0eAG/Mn3C82Kp21ZFtu3tHNxyLLjBpy+GT7PudmW7aKJuWnQ==",
+  "_location": "/@polymer/app-route",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/app-route@^3.0.0-pre.1",
+    "name": "@polymer/app-route",
+    "escapedName": "@polymer%2fapp-route",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/"
   ],
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/app-route",
+  "_resolved": "https://registry.npmjs.org/@polymer/app-route/-/app-route-3.0.0-pre.1.tgz",
+  "_shasum": "4fc8f895f899e38461413f4ed1dfa8520aee4396",
+  "_spec": "@polymer/app-route@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj",
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
   "dependencies": {
     "@polymer/iron-location": "^3.0.0-pre.1",
     "@polymer/polymer": "^3.0.0-pre.1"
   },
-  "devDependencies": {}
+  "deprecated": false,
+  "description": "App routing expressed as Polymer Custom Elements.",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/app-route",
+  "license": "http://polymer.github.io/LICENSE.txt",
+  "name": "@polymer/app-route",
+  "version": "3.0.0-pre.1"
 }
