--- a/imports/ui/node_links/@polymer/iron-a11y-keys-behavior/package.json
+++ b/imports/ui/node_links/@polymer/iron-a11y-keys-behavior/package.json
@@ -1,11 +1,47 @@
 {
-  "name": "@polymer/iron-a11y-keys-behavior",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "A behavior that enables keybindings for greater a11y.",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-a11y-keys-behavior@^3.0.0-pre.1",
+  "_id": "@polymer/iron-a11y-keys-behavior@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-2FFkk1zQrcQPtiTNMsYouXi6eGIgbF1F9ih2/M8lBtlyqB9CMr0JWci8/ibt06fm4pQFCvOV76OggvJhVVLYpg==",
+  "_location": "/@polymer/iron-a11y-keys-behavior",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-a11y-keys-behavior@^3.0.0-pre.1",
+    "name": "@polymer/iron-a11y-keys-behavior",
+    "escapedName": "@polymer%2firon-a11y-keys-behavior",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/iron-behaviors",
+    "/@polymer/paper-input",
+    "/@polymer/paper-ripple"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-a11y-keys-behavior/-/iron-a11y-keys-behavior-3.0.0-pre.1.tgz",
+  "_shasum": "0b2954d7f6b04d97c9ae69c7f7cb82b9d4efe3e4",
+  "_spec": "@polymer/iron-a11y-keys-behavior@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/iron-behaviors",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-a11y-keys-behavior/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "A behavior that enables keybindings for greater a11y.",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-a11y-keys-behavior#readme",
   "keywords": [
     "web-components",
     "web-component",
@@ -13,14 +49,12 @@
     "a11y",
     "input"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-a11y-keys-behavior.html",
+  "name": "@polymer/iron-a11y-keys-behavior",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-a11y-keys-behavior.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
