--- a/imports/ui/node_links/@polymer/iron-behaviors/package.json
+++ b/imports/ui/node_links/@polymer/iron-behaviors/package.json
@@ -1,19 +1,53 @@
 {
-  "name": "@polymer/iron-behaviors",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Provides a set of behaviors for the iron elements",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-behaviors@^3.0.0-pre.1",
+  "_id": "@polymer/iron-behaviors@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-rBdPz7056ML+Bfm1QkLATBoT2D9ESqT5pN5Q8KZVJLtvq16NEW2MJuujz/pb4yUAXMCX6HkEh8AAUu93t05iiQ==",
+  "_location": "/@polymer/iron-behaviors",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-behaviors@^3.0.0-pre.1",
+    "name": "@polymer/iron-behaviors",
+    "escapedName": "@polymer%2firon-behaviors",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/iron-autogrow-textarea",
+    "/@polymer/paper-behaviors",
+    "/@polymer/paper-input"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-behaviors/-/iron-behaviors-3.0.0-pre.1.tgz",
+  "_shasum": "bbb1d7555bf93e5d221d18cbf82d6994b39585b7",
+  "_spec": "@polymer/iron-behaviors@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-behaviors",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-behaviors/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/iron-a11y-keys-behavior": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Provides a set of behaviors for the iron elements",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-behaviors#readme",
+  "license": "http://polymer.github.io/LICENSE.txt",
+  "name": "@polymer/iron-behaviors",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-behaviors.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1",
-    "@polymer/iron-a11y-keys-behavior": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
