--- a/imports/ui/node_links/@polymer/iron-checked-element-behavior/package.json
+++ b/imports/ui/node_links/@polymer/iron-checked-element-behavior/package.json
@@ -1,26 +1,55 @@
 {
-  "name": "@polymer/iron-checked-element-behavior",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Implements an element that has a checked attribute and can be added to a form",
+  "_from": "@polymer/iron-checked-element-behavior@^3.0.0-pre.1",
+  "_id": "@polymer/iron-checked-element-behavior@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-LSOmqiWEiwq+wQSy8DemTIH5vi++7/Kb/m/p4idHWZbyaZzXWlYJch/1PpDZUg+bW9nhAAXG5xnCRw/xcdf/Lw==",
+  "_location": "/@polymer/iron-checked-element-behavior",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-checked-element-behavior@^3.0.0-pre.1",
+    "name": "@polymer/iron-checked-element-behavior",
+    "escapedName": "@polymer%2firon-checked-element-behavior",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/paper-behaviors"
+  ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-checked-element-behavior/-/iron-checked-element-behavior-3.0.0-pre.1.tgz",
+  "_shasum": "329089923fdc05a974ca7d78048c65cd7249150d",
+  "_spec": "@polymer/iron-checked-element-behavior@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-behaviors",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-checked-element-behavior/issues"
+  },
+  "bundleDependencies": false,
   "contributors": "The Polymer Authors",
+  "dependencies": {
+    "@polymer/iron-form-element-behavior": "^3.0.0-pre.1",
+    "@polymer/iron-validatable-behavior": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Implements an element that has a checked attribute and can be added to a form",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-checked-element-behavior",
   "keywords": [
     "web-components",
     "polymer",
     "iron",
     "behavior"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-checked-element-behavior.html",
+  "name": "@polymer/iron-checked-element-behavior",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-checked-element-behavior.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/iron-checked-element-behavior",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1",
-    "@polymer/iron-validatable-behavior": "^3.0.0-pre.1",
-    "@polymer/iron-form-element-behavior": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
