--- a/imports/ui/node_links/@polymer/iron-flex-layout/package.json
+++ b/imports/ui/node_links/@polymer/iron-flex-layout/package.json
@@ -1,24 +1,59 @@
 {
-  "name": "@polymer/iron-flex-layout",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Provide flexbox-based layouts",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-flex-layout@^3.0.0-pre.1",
+  "_id": "@polymer/iron-flex-layout@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-EXkfULT1I2nNOA1fT8JXG+wFnl9OMcX0dqPawbQcE3B8FlsSc/2c9bdKppK6AZEi5wD20zZhBc5BtjzM1LXXrw==",
+  "_location": "/@polymer/iron-flex-layout",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-flex-layout@^3.0.0-pre.1",
+    "name": "@polymer/iron-flex-layout",
+    "escapedName": "@polymer%2firon-flex-layout",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/app-layout",
+    "/@polymer/iron-autogrow-textarea",
+    "/@polymer/paper-button",
+    "/@polymer/paper-styles"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-flex-layout/-/iron-flex-layout-3.0.0-pre.1.tgz",
+  "_shasum": "46738316b52fe2858bf4fb207176366b1657457f",
+  "_spec": "@polymer/iron-flex-layout@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/app-layout",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-flex-layout/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Provide flexbox-based layouts",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-flex-layout#readme",
   "keywords": [
     "web-components",
     "polymer",
     "layout"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-flex-layout.html",
+  "name": "@polymer/iron-flex-layout",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-flex-layout.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
