--- a/imports/ui/node_links/@polymer/iron-input/package.json
+++ b/imports/ui/node_links/@polymer/iron-input/package.json
@@ -1,27 +1,58 @@
 {
-  "name": "@polymer/iron-input",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "An input element with data binding",
-  "contributors": [
-    "The Polymer Authors"
-  ],
-  "keywords": [
-    "web-components",
-    "polymer",
-    "input"
-  ],
-  "main": "iron-input.html",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/PolymerElements/iron-input.git"
+  "_from": "@polymer/iron-input@^3.0.0-pre.1",
+  "_id": "@polymer/iron-input@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-K0szbRhBjyEE8tkD73Lh2rDRywKUZROteY9Qe+fK7+55OuOAYZ5BtopC+WNUIJ2Heblmizam/e1SoWmCON+oxw==",
+  "_location": "/@polymer/iron-input",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-input@^3.0.0-pre.1",
+    "name": "@polymer/iron-input",
+    "escapedName": "@polymer%2firon-input",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/iron-input",
+  "_requiredBy": [
+    "/@polymer/paper-input"
+  ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-input/-/iron-input-3.0.0-pre.1.tgz",
+  "_shasum": "b8e0563353ce101fadb619ed55af84882d19f73d",
+  "_spec": "@polymer/iron-input@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-input",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-input/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
   "dependencies": {
     "@polymer/iron-a11y-announcer": "^3.0.0-pre.1",
     "@polymer/iron-validatable-behavior": "^3.0.0-pre.1",
     "@polymer/polymer": "^3.0.0-pre.1"
   },
-  "devDependencies": {}
+  "deprecated": false,
+  "description": "An input element with data binding",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-input",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "input"
+  ],
+  "license": "http://polymer.github.io/LICENSE.txt",
+  "main": "iron-input.html",
+  "name": "@polymer/iron-input",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/PolymerElements/iron-input.git"
+  },
+  "version": "3.0.0-pre.1"
 }
