--- a/imports/ui/node_links/@polymer/iron-location/package.json
+++ b/imports/ui/node_links/@polymer/iron-location/package.json
@@ -1,24 +1,55 @@
 {
-  "name": "@polymer/iron-location",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Bidirectional data binding into the page's URL.",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-location@^3.0.0-pre.1",
+  "_id": "@polymer/iron-location@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-+81iu+eNlytCWQIos6Qm9XZfsI7l5Bv09Wh9vrxPgzSupHFcW6QrtDXOthLp5M7Uko1M/0HO/e9sx4OQYXhhAw==",
+  "_location": "/@polymer/iron-location",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-location@^3.0.0-pre.1",
+    "name": "@polymer/iron-location",
+    "escapedName": "@polymer%2firon-location",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/app-route"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-location/-/iron-location-3.0.0-pre.1.tgz",
+  "_shasum": "e2fb5f817729102fcb1838f14a67c7da57d939fe",
+  "_spec": "@polymer/iron-location@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/app-route",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-location/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Bidirectional data binding into the page's URL.",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-location",
   "keywords": [
     "web-components",
     "polymer",
     "routing"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
+  "name": "@polymer/iron-location",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-location.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/iron-location",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
