--- a/imports/ui/node_links/@polymer/iron-resizable-behavior/package.json
+++ b/imports/ui/node_links/@polymer/iron-resizable-behavior/package.json
@@ -1,25 +1,57 @@
 {
-  "name": "@polymer/iron-resizable-behavior",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Coordinates the flow of resizeable elements",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-resizable-behavior@^3.0.0-pre.1",
+  "_id": "@polymer/iron-resizable-behavior@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-vgZrYEulXAbJA2qoaxwb2PvwIYUDbrzLSb/plntfXCNdvvWF5EFfofYaGq+Ggzz3hvqI+I5rUWkuwADgNM5PSA==",
+  "_location": "/@polymer/iron-resizable-behavior",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-resizable-behavior@^3.0.0-pre.1",
+    "name": "@polymer/iron-resizable-behavior",
+    "escapedName": "@polymer%2firon-resizable-behavior",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/app-layout"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-resizable-behavior/-/iron-resizable-behavior-3.0.0-pre.1.tgz",
+  "_shasum": "1a6c0276329fdb41818c5e1356f9a8089cf3fbdb",
+  "_spec": "@polymer/iron-resizable-behavior@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/app-layout",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-resizable-behavior/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Coordinates the flow of resizeable elements",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-resizable-behavior#readme",
   "keywords": [
     "web-components",
     "polymer",
     "iron",
     "behavior"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-resizable-behavior.html",
+  "name": "@polymer/iron-resizable-behavior",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-resizable-behavior.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
