--- a/imports/ui/node_links/@polymer/iron-scroll-target-behavior/package.json
+++ b/imports/ui/node_links/@polymer/iron-scroll-target-behavior/package.json
@@ -1,25 +1,56 @@
 {
-  "name": "@polymer/iron-scroll-target-behavior",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Allows to define a scroller target",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/iron-scroll-target-behavior@^3.0.0-pre.1",
+  "_id": "@polymer/iron-scroll-target-behavior@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-EtCXzfjfMrZcuCL3il72HEhCMIaBqnIj0EPNbFVxYYN84DWitx1tk5Ua1ED4cqNU85Ysz34B9DQ9tritxDUmoA==",
+  "_location": "/@polymer/iron-scroll-target-behavior",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-scroll-target-behavior@^3.0.0-pre.1",
+    "name": "@polymer/iron-scroll-target-behavior",
+    "escapedName": "@polymer%2firon-scroll-target-behavior",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/app-layout"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-scroll-target-behavior/-/iron-scroll-target-behavior-3.0.0-pre.1.tgz",
+  "_shasum": "39f5754efdf7083fb82c295a3c94a30e57fbbacf",
+  "_spec": "@polymer/iron-scroll-target-behavior@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/app-layout",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-scroll-target-behavior/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Allows to define a scroller target",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-scroll-target-behavior",
   "keywords": [
     "web-components",
     "polymer",
     "scroll"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-scroll-target-behavior.html",
+  "name": "@polymer/iron-scroll-target-behavior",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-scroll-target-behavior.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/iron-scroll-target-behavior",
-  "dependencies": {
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
