--- a/imports/ui/node_links/@polymer/iron-validatable-behavior/package.json
+++ b/imports/ui/node_links/@polymer/iron-validatable-behavior/package.json
@@ -1,25 +1,56 @@
 {
-  "name": "@polymer/iron-validatable-behavior",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Provides a behavior for an element that validates user input",
+  "_from": "@polymer/iron-validatable-behavior@^3.0.0-pre.1",
+  "_id": "@polymer/iron-validatable-behavior@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-zk2z7kEXf8Y8DnGOCEBKmbvWQ7t7ns/wgj9zT+q53vuaa/76rZHM9l5xyOnGIxmNvccs1Y7qxg3yELvLP0N18w==",
+  "_location": "/@polymer/iron-validatable-behavior",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/iron-validatable-behavior@^3.0.0-pre.1",
+    "name": "@polymer/iron-validatable-behavior",
+    "escapedName": "@polymer%2firon-validatable-behavior",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/iron-autogrow-textarea",
+    "/@polymer/iron-checked-element-behavior",
+    "/@polymer/iron-input"
+  ],
+  "_resolved": "https://registry.npmjs.org/@polymer/iron-validatable-behavior/-/iron-validatable-behavior-3.0.0-pre.1.tgz",
+  "_shasum": "2d1f05e69738e003a761769036d1aece32a7a266",
+  "_spec": "@polymer/iron-validatable-behavior@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/iron-checked-element-behavior",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/iron-validatable-behavior/issues"
+  },
+  "bundleDependencies": false,
   "contributors": "The Polymer Authors",
+  "dependencies": {
+    "@polymer/iron-meta": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Provides a behavior for an element that validates user input",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/iron-validatable-behavior",
   "keywords": [
     "web-components",
     "polymer",
     "iron",
     "behavior"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "iron-validatable-behavior.html",
+  "name": "@polymer/iron-validatable-behavior",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/iron-validatable-behavior.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/iron-validatable-behavior",
-  "dependencies": {
-    "@polymer/iron-meta": "^3.0.0-pre.1",
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
