--- a/imports/ui/node_links/@polymer/paper-behaviors/package.json
+++ b/imports/ui/node_links/@polymer/paper-behaviors/package.json
@@ -1,11 +1,48 @@
 {
-  "name": "@polymer/paper-behaviors",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Common behaviors across the paper elements",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/paper-behaviors@^3.0.0-pre.1",
+  "_id": "@polymer/paper-behaviors@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-UKz+hz3uqY4vtP633djWoF+D0CwJSxJbTo+FtF48YyhU1N3lK/modDamyBzuoDGvZgihMpi/Or6WQ7aimYVugQ==",
+  "_location": "/@polymer/paper-behaviors",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/paper-behaviors@^3.0.0-pre.1",
+    "name": "@polymer/paper-behaviors",
+    "escapedName": "@polymer%2fpaper-behaviors",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/paper-button"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/paper-behaviors/-/paper-behaviors-3.0.0-pre.1.tgz",
+  "_shasum": "805506d7799fa45566d9ce6a18c5943a8203764b",
+  "_spec": "@polymer/paper-behaviors@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-button",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/paper-behaviors/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/iron-behaviors": "^3.0.0-pre.1",
+    "@polymer/iron-checked-element-behavior": "^3.0.0-pre.1",
+    "@polymer/paper-ripple": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Common behaviors across the paper elements",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/paper-behaviors",
   "keywords": [
     "web-components",
     "web-component",
@@ -13,17 +50,11 @@
     "paper",
     "behavior"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
+  "name": "@polymer/paper-behaviors",
   "repository": {
     "type": "git",
-    "url": "git://github.com/PolymerElements/paper-behaviors"
+    "url": "git://github.com/PolymerElements/paper-behaviors.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/PolymerElements/paper-behaviors",
-  "dependencies": {
-    "@polymer/iron-behaviors": "^3.0.0-pre.1",
-    "@polymer/iron-checked-element-behavior": "^3.0.0-pre.1",
-    "@polymer/paper-ripple": "^3.0.0-pre.1",
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
