--- a/imports/ui/node_links/@polymer/paper-ripple/package.json
+++ b/imports/ui/node_links/@polymer/paper-ripple/package.json
@@ -1,25 +1,57 @@
 {
-  "name": "@polymer/paper-ripple",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Adds a material design ripple to any container",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/paper-ripple@^3.0.0-pre.1",
+  "_id": "@polymer/paper-ripple@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-K7d439UEDBpUJHV7iYsHueOMLK48Fq7sC42wwmt6oEgI5vKkbCtf76031yGems7fe++5LDim1cbCV8Fm3Iw1KQ==",
+  "_location": "/@polymer/paper-ripple",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/paper-ripple@^3.0.0-pre.1",
+    "name": "@polymer/paper-ripple",
+    "escapedName": "@polymer%2fpaper-ripple",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/paper-behaviors"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/paper-ripple/-/paper-ripple-3.0.0-pre.1.tgz",
+  "_shasum": "67e692ea2c6d91d4f5f5bdf998dbd8a52acd9efa",
+  "_spec": "@polymer/paper-ripple@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-behaviors",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/paper-ripple/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/iron-a11y-keys-behavior": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Adds a material design ripple to any container",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/PolymerElements/paper-ripple#readme",
   "keywords": [
     "web-components",
     "polymer",
     "ripple"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "paper-ripple.html",
+  "name": "@polymer/paper-ripple",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/paper-ripple.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "@polymer/iron-a11y-keys-behavior": "^3.0.0-pre.1",
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
