--- a/imports/ui/node_links/@polymer/paper-styles/package.json
+++ b/imports/ui/node_links/@polymer/paper-styles/package.json
@@ -1,27 +1,59 @@
 {
-  "name": "@polymer/paper-styles",
-  "flat": true,
-  "version": "3.0.0-pre.1",
-  "description": "Common (global) styles for Material Design elements.",
-  "contributors": [
-    "The Polymer Authors"
+  "_from": "@polymer/paper-styles@^3.0.0-pre.1",
+  "_id": "@polymer/paper-styles@3.0.0-pre.1",
+  "_inBundle": false,
+  "_integrity": "sha512-L/8B34oiDKNMz6vI/T8ZykMJAhJ6OghCOdS4avpeWKDmS1uuZwdEvVMZt7+8aSccpbfBYi8haYPrnhBNvf76cw==",
+  "_location": "/@polymer/paper-styles",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@polymer/paper-styles@^3.0.0-pre.1",
+    "name": "@polymer/paper-styles",
+    "escapedName": "@polymer%2fpaper-styles",
+    "scope": "@polymer",
+    "rawSpec": "^3.0.0-pre.1",
+    "saveSpec": null,
+    "fetchSpec": "^3.0.0-pre.1"
+  },
+  "_requiredBy": [
+    "/@polymer/paper-button",
+    "/@polymer/paper-input"
   ],
+  "_resolved": "https://registry.npmjs.org/@polymer/paper-styles/-/paper-styles-3.0.0-pre.1.tgz",
+  "_shasum": "333fd04f5052733ebc10e3a08a59f07b5586af13",
+  "_spec": "@polymer/paper-styles@^3.0.0-pre.1",
+  "_where": "/home/yorrd/PhpstormProjects/basePolymer2Proj/node_modules/@polymer/paper-button",
+  "bugs": {
+    "url": "https://github.com/PolymerElements/paper-styles/issues"
+  },
+  "bundleDependencies": false,
+  "contributors": [
+    {
+      "name": "The Polymer Authors"
+    }
+  ],
+  "dependencies": {
+    "@polymer/font-roboto": "^3.0.0-pre.1",
+    "@polymer/iron-flex-layout": "^3.0.0-pre.1",
+    "@polymer/polymer": "^3.0.0-pre.1"
+  },
+  "deprecated": false,
+  "description": "Common (global) styles for Material Design elements.",
+  "devDependencies": {},
+  "flat": true,
+  "homepage": "https://github.com/polymerelements/paper-styles/",
   "keywords": [
     "web-component",
     "polymer",
     "style"
   ],
+  "license": "http://polymer.github.io/LICENSE.txt",
   "main": "paper-styles.html",
+  "name": "@polymer/paper-styles",
   "repository": {
     "type": "git",
     "url": "git://github.com/PolymerElements/paper-styles.git"
   },
-  "license": "http://polymer.github.io/LICENSE.txt",
-  "homepage": "https://github.com/polymerelements/paper-styles/",
-  "dependencies": {
-    "@polymer/iron-flex-layout": "^3.0.0-pre.1",
-    "@polymer/font-roboto": "^3.0.0-pre.1",
-    "@polymer/polymer": "^3.0.0-pre.1"
-  },
-  "devDependencies": {}
+  "version": "3.0.0-pre.1"
 }
