--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@polymer/app-route": "^3.0.0-pre.1",
     "@polymer/paper-button": "^3.0.0-pre.1",
     "@polymer/paper-input": "^3.0.0-pre.1",
+    "@polymer/paper-toggle-button": "^3.0.0-pre.1",
     "@skatejs/ssr": "^0.15.4",
     "@webcomponents/webcomponentsjs": "^1.0.18",
     "babel-runtime": "^6.26.0",
